--- a/Html/index.html
+++ b/Html/index.html
@@ -54,8 +54,10 @@
             </table>
         </div>
         <!--table end-->
+        <!-- add image block-->
         <div>
             <img src="Element/Image/Gato siames.jpg" alt="gato siames acostado">
         </div>
+        <!-- end image block-->
         <script src="" async defer></script>
     </body>
