--- a/Html/index.html
+++ b/Html/index.html
@@ -56,7 +56,9 @@
         <!--table end-->
         <!-- add image block-->
         <div>
+            <h2>Imagen de un gatos simas</h2>
             <img src="Element/Image/Gato siames.jpg" alt="gato siames acostado">
+
         </div>
         <!-- end image block-->
         <script src="" async defer></script>
