--- a/Html/index.html
+++ b/Html/index.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html lang="es">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Html primer</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!--bloque  de inicio-->
-        <div>
-            <span>
-                <h1>Ruben feng</h1>
-                <h5>
-                    <p> #programador </p>
-                    <p> #disenador </p>
-                </h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique porro ducimus ut at animi ab. Molestiae vero sapiente laborum laboriosam aliquid vitae! Placeat officia tempore mollitia cum ad aliquam possimus.</p>
-            </span>
+        <div class="texto">
+            <h1>Ruben feng</h1>
+            <p> #programador </p>
+            <p> #disenador </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique porro ducimus ut at animi ab. Molestiae vero sapiente laborum laboriosam aliquid vitae! Placeat officia tempore mollitia cum ad aliquam possimus.</p>
         </div>
-        <div>
+        <div class="texto">
             <h1>Sobre mi</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat repudiandae eius voluptatibus. Laborum, provident blanditiis in error, porro accusantium beatae earum omnis facilis incidunt praesentium? Repellendus vel expedita corrupti et.</p>
         </div>
         <!--bloque fin-->
         <!--table init-->
-        <div>
-            <table>
+        <div class="texto">
+            <table class="table_color">
                 <thead>
                     <tr>
                         <th colspan="4">ejemplo de portafolio</th>
@@ -55,9 +47,9 @@
         </div>
         <!--table end-->
         <!-- add image block-->
-        <div>
+        <div class="texto">
             <h2>Imagen de un gatos simas</h2>
-            <img src="Element/Image/Gato siames.jpg" alt="gato siames acostado">
+            <img src="Element/Image/Gato-siames.jpg" alt="gato siames acostado" height="250">
 
         </div>
         <!-- end image block-->
