fin del curso para hacer el reto

--- a/Html/index.html
+++ b/Html/index.html
@@ -12,17 +12,19 @@
         <!--bloque  de inicio-->
         <div class="texto">
             <h1>Ruben feng</h1>
-            <p> #programador </p>
-            <p> #disenador </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique porro ducimus ut at animi ab. Molestiae vero sapiente laborum laboriosam aliquid vitae! Placeat officia tempore mollitia cum ad aliquam possimus.</p>
+            <p class="hastag"> #programador </p>
+            <p class="hastag"> #disenador </p>
+            <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique porro ducimus ut at animi ab. Molestiae vero sapiente laborum laboriosam aliquid vitae! Placeat officia tempore mollitia cum ad aliquam possimus.</p>
         </div>
-        <div class="texto">
-            <h1>Sobre mi</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat repudiandae eius voluptatibus. Laborum, provident blanditiis in error, porro accusantium beatae earum omnis facilis incidunt praesentium? Repellendus vel expedita corrupti et.</p>
+        <div id="article">
+            <div class="sobreMi texto">
+                <h1>Sobre mi</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat repudiandae eius voluptatibus. Laborum, provident blanditiis in error, porro accusantium beatae earum omnis facilis incidunt praesentium? Repellendus vel expedita corrupti et.</p>
+            </div>
+                <img src="Element/Image/Gato-siames.jpg" alt="gato siames acostado" width= 300>
         </div>
-        <!--bloque fin-->
-        <!--table init-->
-        <div class="texto">
+        
+         <div class="texto">
             <table class="table_color">
                 <thead>
                     <tr>
@@ -44,13 +46,6 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
-        <!--table end-->
-        <!-- add image block-->
-        <div class="texto">
-            <h2>Imagen de un gatos simas</h2>
-            <img src="Element/Image/Gato-siames.jpg" alt="gato siames acostado" height="250">
-
         </div>
         <!-- end image block-->
         <script src="" async defer></script>
