--- a/Html/index.html
+++ b/Html/index.html
@@ -14,14 +14,13 @@
             <h1>Ruben feng</h1>
             <p class="hastag"> #programador </p>
             <p class="hastag"> #disenador </p>
-            <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique porro ducimus ut at animi ab. Molestiae vero sapiente laborum laboriosam aliquid vitae! Placeat officia tempore mollitia cum ad aliquam possimus.</p>
+            <p class="texto linea">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique porro ducimus ut at animi ab. Molestiae vero sapiente laborum laboriosam aliquid vitae! Placeat officia tempore mollitia cum ad aliquam possimus.</p>
         </div>
         <div id="article">
             <div class="sobreMi texto">
                 <h1>Sobre mi</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat repudiandae eius voluptatibus. Laborum, provident blanditiis in error, porro accusantium beatae earum omnis facilis incidunt praesentium? Repellendus vel expedita corrupti et.</p>
+                <p><img src="Element/Image/Gato-siames.jpg" alt="gato siames acostado" width= 300>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat repudiandae eius voluptatibus. Laborum, provident blanditiis in error, porro accusantium beatae earum omnis facilis incidunt praesentium? Repellendus vel expedita corrupti et.</p>
             </div>
-                <img src="Element/Image/Gato-siames.jpg" alt="gato siames acostado" width= 300>
         </div>
         
          <div class="texto">
